--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ description: Time Machine is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-time-machine
+
+collections:
+  stories:
+    output: true
