--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: Time Machine theme
-description: Time Machine is a theme for GitHub Pages.
-show_downloads: true
+title: Gem and Ruby
+description: add description later
 google_analytics:
 theme: jekyll-theme-time-machine
 
